<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_activity_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sign_up_activity_cardview_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/main_accent"
            app:cardCornerRadius="25dp"
            app:cardElevation="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/kanit_cyrillic"
                android:paddingTop="2dp"
                android:text="@string/sign_up_activity_header"
                android:textAlignment="center"
                android:textColor="@color/main_semi_dark"
                android:textSize="28sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sign_up_activity_cardview_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="35dp"
            app:cardBackgroundColor="@color/main_light"
            app:cardCornerRadius="25dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="70dp"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:text="@string/sign_up_activity_preheader"
                    android:textAlignment="center"
                    android:textColor="@color/main_semi_dark"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ico_warning" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit_cyrillic"
                        android:text="@string/sign_up_activity_username_warning"
                        android:textAlignment="textStart"
                        android:textColor="@color/main_semi_dark"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <EditText
                    android:id="@+id/sign_up_activity_edittext_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:digits="@string/allowed_characters_username"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:hint="@string/sign_up_activity_username_hint"
                    android:inputType="text"
                    android:textColor="@color/main_accent" />

                <TextView
                    android:id="@+id/sign_up_activity_textview_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:textAlignment="textStart"
                    android:textColor="@color/main_accent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ico_warning" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit_cyrillic"
                        android:text="@string/sign_up_activity_login_warning"
                        android:textAlignment="textStart"
                        android:textColor="@color/main_semi_dark"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <EditText
                    android:id="@+id/sign_up_activity_edittext_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:digits="@string/allowed_characters_login"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:hint="@string/sign_up_activity_login_hint"
                    android:inputType="text"
                    android:textColor="@color/main_accent" />

                <TextView
                    android:id="@+id/sign_up_activity_textview_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:textAlignment="textStart"
                    android:textColor="@color/main_accent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ico_warning" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit_cyrillic"
                        android:text="@string/sign_up_activity_password_warning"
                        android:textAlignment="textStart"
                        android:textColor="@color/main_semi_dark"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <EditText
                    android:id="@+id/sign_up_activity_edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:digits="@string/allowed_characters_password"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:hint="@string/sign_up_activity_password_hint"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/main_accent" />

                <EditText
                    android:id="@+id/sign_up_activity_edittext_password_rp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:digits="@string/allowed_characters_password"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:hint="@string/sign_up_activity_password_re_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/main_accent" />

                <TextView
                    android:id="@+id/sign_up_activity_textview_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/kanit_cyrillic"
                    android:textAlignment="textStart"
                    android:textColor="@color/main_accent"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    app:cardCornerRadius="25dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="@color/main_accent" />

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sign_up_activity_button_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.5"
                        android:elevation="20dp"
                        android:fontFamily="@font/kanit_cyrillic"
                        android:gravity="center"
                        android:onClick="cancelRegistrationPressed"
                        android:text="@string/sign_up_activity_cancel_button"
                        android:textColor="@color/main_light"
                        android:textSize="15sp"
                        app:backgroundTint="@color/main_semi_dark"
                        app:cornerRadius="25dp" />

                    <com.google.android.material.button.MaterialButton
                        android:onClick="confirmRegistrationPressed"
                        android:id="@+id/sign_up_activity_button_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.5"
                        android:elevation="20dp"
                        android:fontFamily="@font/kanit_cyrillic"
                        android:gravity="center"
                        android:text="@string/sign_up_activity_register_button"
                        android:textColor="@color/main_light"
                        android:textSize="15sp"
                        app:backgroundTint="@color/main_accent"
                        app:cornerRadius="25dp" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>